@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.21_01-dev
 
+avoid quoting <Perl> config if args_how == RAW_ARGS
+thanks to Michael Schout for the spot
+
 PerlPassEnv maintains it's value beyond the first request,
 thanks to Chris Thorman for the spot
 
